fixed spacing issues

--- a/src/app/contact/contact.module.css
+++ b/src/app/contact/contact.module.css
@@ -118,4 +118,7 @@
     grid-template-columns: 1fr;
     row-gap: 20px;
   }
+  .contact {
+    padding-bottom: 30px;
+  }
 }
