--- a/src/components/Leadership.module.css
+++ b/src/components/Leadership.module.css
@@ -37,7 +37,7 @@
   width: 100%;
   height: auto;
   object-fit: cover;
-  border-radius: 10px;
+  border-radius: 10.5px;
 }
 .columnLeadership {
   display: flex;
